fixed title spacing on pages

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,6 +27,6 @@
     @apply rounded-full bg-blue text-black h-10 w-10
   }
   .page-title {
-    @apply mx-4 filter drop-shadow-md
+    @apply mx-4 my-6 filter drop-shadow-md
   }
 }
